--- a/paddingMargins.html
+++ b/paddingMargins.html
@@ -8,16 +8,16 @@
     <title>Tailwind Course</title>
   </head>
   <body>
-    <!-- <div class="text-4xl text-red-500 p-16">Hello YouTube! :)</div>
+    <div class="text-4xl text-red-500 p-16">Hello YouTube! :)</div>
     <div class="text-4xl text-yellow-500 pr-12 pl-32 pt-18 pb-12">
       This is a Tailwind Course
     </div>
-    <div class="text-4xl text-blue-500 py-8 px-32">By Raul Terhes</div> -->
-    <!-- <div class="text-4xl text-red-500 m-16">Hello YouTube! :)</div>
+    <div class="text-4xl text-blue-500 py-8 px-32">By Raul Terhes</div>
+    <div class="text-4xl text-red-500 m-16">Hello YouTube! :)</div>
     <div class="text-4xl text-yellow-500 mx-12 my-32 mb-64">
       This is a Tailwind Course
     </div>
-    <div class="text-4xl text-blue-500 -m-16">By Raul Terhes</div> -->
+    <div class="text-4xl text-blue-500 -m-16">By Raul Terhes</div>
     <div class="space-y-16">
       <div>Text1</div>
       <div>Text2</div>
