--- a/typography.html
+++ b/typography.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <!-- TYPOGRAPHY -->
-    <!-- <h1 class="text-xs">Hello YouTube! :)</h1>
+    <h1 class="text-xs">Hello YouTube! :)</h1>
     <h1 class="text-sm">Hello YouTube! :)</h1>
     <h1 class="text-base">Hello YouTube! :)</h1>
     <h1 class="text-lg">Hello YouTube! :)</h1>
     <h1 class="text-xl">Hello YouTube! :)</h1>
-    <h1 class="text-2xl">Hello YouTube! :)</h1> -->
+    <h1 class="text-2xl">Hello YouTube! :)</h1>
     <!-- 2 to 9 xl -->
-    <!-- <h1 class="text-9xl">Hello YouTube! :)</h1> -->
-    <!-- <h1 class="text-4xl italic">Hello YouTube! :)</h1>
+    <h1 class="text-9xl">Hello YouTube! :)</h1>
+    <h1 class="text-4xl italic">Hello YouTube! :)</h1>
     <h1 class="text-4xl font-thin">Hello YouTube! :)</h1>
     <h1 class="text-4xl font-extralight">Hello YouTube! :)</h1>
     <h1 class="text-4xl font-light">Hello YouTube! :)</h1>
@@ -26,14 +26,14 @@
     <h1 class="text-4xl font-semibold">Hello YouTube! :)</h1>
     <h1 class="text-4xl font-bold">Hello YouTube! :)</h1>
     <h1 class="text-4xl font-extrabold">Hello YouTube! :)</h1>
-    <h1 class="text-4xl font-black">Hello YouTube! :)</h1> -->
-    <!-- <h1 class="text-4xl text-right">Hello YouTube! :)</h1>
+    <h1 class="text-4xl font-black">Hello YouTube! :)</h1>
+    <h1 class="text-4xl text-right">Hello YouTube! :)</h1>
     <h1 class="text-4xl text-center">Hello YouTube! :)</h1>
     <h1 class="text-4xl text-left">Hello YouTube! :)</h1>
     <h1 class="text-4xl text-justify">
       Hello YouTube! :) Hello YouTube! :)Hello YouTube! :)Hello YouTube! :)
-    </h1> -->
-    <!-- <h1 class="text-4xl text-transparent">Hello YouTube! :)</h1>
+    </h1>
+    <h1 class="text-4xl text-transparent">Hello YouTube! :)</h1>
     <h1 class="text-4xl text-black">Hello YouTube! :)</h1>
     <h1 class="text-4xl text-white">Hello YouTube! :)</h1>
     <h1 class="text-4xl text-gray-50">Hello YouTube! :)</h1>
@@ -48,15 +48,15 @@
     <h1 class="text-4xl text-blue-500">Hello YouTube! :)</h1>
     <h1 class="text-4xl text-indigo-300">Hello YouTube! :)</h1>
     <h1 class="text-4xl text-purple-800">Hello YouTube! :)</h1>
-    <h1 class="text-4xl text-pink-500">Hello YouTube! :)</h1> -->
-    <!-- <h1 class="text-4xl text-blue-500 text-opacity-50">Hello YouTube! :)</h1>
+    <h1 class="text-4xl text-pink-500">Hello YouTube! :)</h1>
+    <h1 class="text-4xl text-blue-500 text-opacity-50">Hello YouTube! :)</h1>
     <h1 class="text-4xl text-blue-500 text-opacity-100">Hello YouTube! :)</h1>
     <h1 class="text-4xl text-blue-500 text-opacity-500">Hello YouTube! :)</h1>
-    <h1 class="text-4xl text-blue-500 text-opacity-900">Hello YouTube! :)</h1> -->
-    <!-- <h1 class="text-4xl text-blue-500 underline">Hello YouTube! :)</h1>
+    <h1 class="text-4xl text-blue-500 text-opacity-900">Hello YouTube! :)</h1>
+    <h1 class="text-4xl text-blue-500 underline">Hello YouTube! :)</h1>
     <h1 class="text-4xl text-blue-500 line-through">Hello YouTube! :)</h1>
     <h1 class="text-4xl text-blue-500 uppercase">Hello YouTube! :)</h1>
     <h1 class="text-4xl text-blue-500 lowercase">Hello YouTube! :)</h1>
-    <h1 class="text-4xl text-blue-500 capitalize">hello youTube! :)</h1> -->
+    <h1 class="text-4xl text-blue-500 capitalize">hello youTube! :)</h1>
   </body>
 </html>
